Fix: Устранены замечания преподавателя — убраны DTO из сервисов, добавлена атомарность, методы принимают User